--- a/cordova-adapter/src/main/res/layout/activity_cordova_viewer.xml
+++ b/cordova-adapter/src/main/res/layout/activity_cordova_viewer.xml
@@ -4,16 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.guanhuai365.hellolib.MainActivity">
+    tools:context="com.guanhuai365.cordova_adapter.CordovaViewerActivity">
 
-    <Button
-        android:id="@+id/btn"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:text="TextView"
+        tools:layout_editor_absoluteX="163dp"
+        tools:layout_editor_absoluteY="268dp" />
 </android.support.constraint.ConstraintLayout>
